test/upstream/tsgo/baselines/reference/compiler/regularExpressionQuantifierBounds1.errors.txt
regularExpressionQuantifierBounds1.ts(4,5): error TS1506: Numbers out of order in quantifier.
regularExpressionQuantifierBounds1.ts(5,5): error TS1506: Numbers out of order in quantifier.


==== regularExpressionQuantifierBounds1.ts (2 errors) ====
    const regexes: RegExp[] = [
    	/a{7,8}/,
    	/a{9223372036854775807,9223372036854775808}/,
    	/a{8,7}/,
    	   ~~~
!!! error TS1506: Numbers out of order in quantifier.
    	/a{9223372036854775808,9223372036854775807}/,
    	   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1506: Numbers out of order in quantifier.
    	/a{8,8}/,
    	/a{9223372036854775808,9223372036854775808}/,
    ];
    